<resources>
    <string name="app_name">edX</string>
    <string name="course_details_fb_connect_text">See your friends who are taking this course, and join the official course Facebook group</string>
    <string name="course_details_fb_group">Official course Facebook group</string>
    <string name="course_details_view_handout">Course handouts</string>
    <string name="course_details_your_certificate">Your Certificate</string>
    <string name="course_details_friends_in_course">Friends in this course</string>
    <string name="course_details_share">Share</string>
    <string name="course_details_ending">ENDING</string>
    <string name="course_details_congratulations">Congratulations!</string>
    <string name="course_details_earned_cert">You\'ve earned a certificate</string>
    <string name="friends_in_course">Friends in %1$s</string>
    <string name="open_course_page">Open Course Page</string>
    <string name="friends_in_this_course">Friends in This Course</string>
    <string name="share_application_title">edX for Android</string>
    <string name="share_application_link_url">http://www.edx.org</string>
    <string name="share_application_picture_url">https://www.edx.org/sites/default/files/theme/edx-logo-header.png</string>
    <string name="share_application_description">Free online courses</string>
    <string name="settings_wifi_top">Wi-Fi only download</string>
    <string name="settings_wifi_bottom">Only download content when Wi-Fi is turned on</string>
    <string name="settings_make_courses_visible_top">Make courses visible to friends</string>
    <string name="settings_make_courses_visible_bottom">Allow my friends to see what courses I\'m taking</string>
    <string name="settings_facebook_login">Facebook login</string>
    <string name="settings_facebook_login_body_logged_in">Currently logged in as %s</string>
    <string name="settings_facebook_login_body_logged_out">Log in with your Facebook account</string>
    <string name="settings_facebook_login_error">Unable to contact Facebook</string>
    <string name="settings_facebook_login_fetch">Contacting Facebook...</string>
    <string name="settings_facebook_login_btn">Log in</string>
    <string name="settings_facebook_logout_btn">Log out</string>
    <string name="share_certificate_super">Share your certificate</string>
    <string name="share_certificate_sub">tell your friends about your accomplishment</string>
    <string name="tab_label_certificate">Certificate</string>
    <string name="groups_add_group">+ Create new Facebook Study Group</string>
    <string name="group_list_members">Members %1$s</string>
    <string name="download_data_dialog_title">Data Charges May Apply</string>
    <string name="download_data_dialog_message">You’re not on a preferred network or wi-fi. Significant data charges may apply.</string>
    <string name="need_data">This feature requires an active internet connection.</string>
    <string name="play_data_dialog_OK">OK</string>
    <string name="play_data_dialog_Cancel">Cancel</string>
    <string name="email_username">User name or e-mail address</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Sign In</string>
    <string name="progressText">Please wait....</string>
    <string name="signing_in">Signing In...</string>
    <string name="error_message">Error Message</string>
    <string name="error_heading">The following error occurred while logging you in</string>
    <string name="login_failed">Please make sure that your user name or e-mail address 
        and password are correct and try again.</string>
    <string name="login_failed_no_grant">This account has not been activated. Check your e-mail for activation instructions.</string>
    <string name="new_user">Need an account?</string>
    <string name="sign_up">https://courses.edx.org/register</string>
    <string name="by_signing_up">By signing in to this app, you agree to the </string>
    <string name="licensing_agreement">edX End User Licensing Agreement</string>
    <string name="login_title">Sign in to edX</string>
    <string name="name_default">Morgank</string>
    <string name="email_default">morgan.knuston@yahoo.com</string>
    <string name="action_settings">Settings</string>
    <string name="label_my_courses">My Courses</string>
    <string name="label_my_videos">My Videos</string>
    <string name="label_find_courses">Find Courses</string>
    <string name="label_my_groups">My Study Groups</string>
    <string name="label_submit_feedback">Submit Feedback</string>
    <string name="email_subject">Submit Feedback</string>
    <string name="toggle_turn_on">ON</string>
    <string name="toggle_turn_off">OFF</string>
    <string name="logout">Logout</string>
    <string name="download_only">Download only on Wi-Fi</string>
    <string name="settings_txt">Settings</string>
    <string name="offline_msg">You are offline</string>
    <string name="label_version">Version</string>
    <string name="label_settings">My Settings</string>
    <string name="confirm_dialog_title_help">RESET PASSWORD</string>
    <string name="success_dialog_title_help">PASSWORD RESET E-MAIL SENT</string>
    <string name="title_reset_password_failed">RESET PASSWORD ERROR</string>
    <string name="wifi_dialog_title_help">ALLOW CELLULAR DOWNLOAD</string>
    <string name="success_dialog_message_help">We\'ve sent a message with password reset instructions to your e-mail address. 
        If you don\'t see it in the next few minutes, make sure to check your spam folder.</string>
    <string name="confirm_dialog_message_help">Enter the e-mail address for your account, and we\'ll send you instructions to
         reset your password.</string>
    <string name="wifi_dialog_message_help">Allow your device to download videos over your cellular connection when 
        Wi-Fi is not available. Data charges may apply.</string>
    <string name="delete_dialog_title_help">Confirm Delete</string>
    <string name="delete_single_video_dialog">Are you sure you want to\n delete this video?</string>
    <string name="delete_multiple_video_dialog">Are you sure you want to\n delete these videos?</string>
    <string name="delete_successful_dialog_title_help">Delete</string>
    <string name="leaving_app_data_title">Leaving the edX App</string>
    <string name="leaving_app_data_message">If you leave the app, you will no longer be viewing free edX content. Data charges may apply.</string>
    <string name="reset_dialog_title">Reset Title</string>
    <string name="end_user_title">End User License Agreement</string>
    <string name="course_image">Course Image</string>
    <string name="school_code">School Code</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="new_course_content">New Course Content</string>
    <string name="label_starting_from">Starting</string>
    <string name="label_ended">Ended</string>
    <string name="label_ending_on">Ending</string>
    <string name="label_my_friends_courses">My Friends\' Courses</string>
    <string name="course_banner_certified">Certificate\n Earned</string>
    <string name="course_friends_also_enrolled">Friends also enrolled in this course</string>
    <string name="no_of_videos">0</string>
    <string name="course_content">Course Content</string>
    <string name="chapter_name">Course Name</string>
    <string name="tab_label_courseware">Courseware</string>
    <string name="tab_label_announcement">Announcements</string>
    <string name="tab_label_handouts">Handouts</string>
    <string name="tab_label_course_info">Course Info</string>
    <string name="lecture_screen">Lecture List</string>
    <string name="last_accessed">Last Accessed - </string>
    <string name="no_chapter_text">No courseware is currently available.</string>
    <string name="no_courses_to_display">You have not registered for any courses</string>
    <string name="no_announcements_to_display">There are currently no announcements for this course.</string>
    <string name="no_handouts_to_display">There are currently no handouts for this course.</string>
    <string name="no_information_to_display">Additional course information is currently unavailable.</string>
    <string name="video_title">Video Title</string>
    <string name="video_playing_time">3:45</string>
    <string name="video_size">200MB</string>
    <string name="started_downloading">Downloading</string>
    <string name="title_download">Downloads</string>
    <string name="my_all_videos">All Videos</string>
    <string name="my_recent_videos">Recent Videos</string>
    <string name="offline_text">Offline Mode</string>
    <string name="no_videos_to_display">You haven\'t downloaded\n any videos.</string>
    <string name="download_name">Engaging in Interaction</string>
    <string name="download_time">53:59:21</string>
    <string name="download_percentage">45.20/200MB</string>
    <string name="text_download_msg_cnt">20</string>
    <string name="text_download_msg_singular">Video Downloaded</string>
    <string name="text_download_msg_plural">Videos Downloaded</string>
    <string name="view_button_text">VIEW</string>
    <string name="download_failed_text">Download Failed</string>
    <string name="video_title_label">Title</string>
    <string name="video_section_label">Section</string>
    <string name="video_subsection_label">Subsection</string>
    <string name="videos_no">4 Videos</string>
    <string name="size_of_videos">890 MB</string>
    <string name="announcement_date">Announcement date</string>
    <string name="label_videos">videos</string>
    <string name="label_video">video</string>
    <string name="download_exceed_title">Large Download</string>
    <string name="downloading_multiple">Downloading %1$s videos</string>
    <string name="downloading_single">Downloading %1$s video</string>
    <string name="title_lecture_complete">You\'ve reached the end of this video.</string>
    <string name="msg_lecture_complete">Would you like to watch the next video?</string>
    <string name="msg_started_one_video_download">"Downloading 1 Video"</string>
    <string name="msg_video_not_downloaded">"Unable to download video"</string>
    <string name="msg_video_not_available">This video is currently unavailable.\nCheck back again later.</string>
    <string name="login_error">Sign-in Error</string>
    <string name="no_connectivity">Connection Error</string>
    <string name="or_symbol"> | </string>
    <string name="allow">ALLOW</string>
    <string name="do_not_allow">DON\'T ALLOW</string>
    <string name="lbl_closed_caption">Closed Captions</string>
    <string name="lbl_video_speed">Video Speed</string>
    <string name="cc_english_code">en</string>
    <string name="lbl_cc_english">English</string>
    <string name="cc_chinese_code">zh</string>
    <string name="lbl_cc_chinese">Chinese</string>
    <string name="cc_portugal_code">pt</string>
    <string name="header_group_name">Group Name</string>
    <string name="hint_group_name">Enter Group Name</string>
    <string name="header_group_desc">Group Description (optional)</string>
    <string name="hint_group_desc">Enter Group Description</string>
    <string name="create_group_disclaimer">Creating an edX group will also create a Facebook group. The group discussion can only be seen by group members.</string>
    <string name="create_group_next">Next</string>
    <string name="error_no_friends_connected">None of your Facebook friends are connected to edX</string>
    <string name="btn_share_app">Tell your friends about edX</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="improve_your_career">Improve your career,\nyour mind, your life</string>
    <string name="sign_up_and_learn">Sign up and start learning</string>
</resources>