<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/group_create_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_group_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:paddingTop="14dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bold_text"
                android:textStyle="bold"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:text="@string/header_group_name" />

            <EditText
                android:id="@+id/text_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regular_text"
                android:textSize="14sp"
                android:layout_marginTop="-1dp"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textCapSentences|textAutoCorrect"
                android:hint="@string/hint_group_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bold_text"
                android:layout_marginTop="26dp"
                android:textStyle="bold"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:text="@string/header_group_desc" />

            <EditText
                android:id="@+id/text_group_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                style="@style/regular_text"
                android:textSize="14sp"
                android:maxLines="5"
                android:inputType="textCapSentences|textAutoCorrect"
                android:hint="@string/hint_group_desc" />

            <TextView
                android:id="@+id/group_create_facebook_text"
                android:layout_marginTop="42dp"
                android:layout_gravity="center"
                style="@style/regular_text"
                android:textSize="10sp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_facebookblue"
                android:visibility="invisible"
                android:gravity="center_vertical|start" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regular_text"
                android:gravity="center"
                android:textSize="10sp"
                android:text="@string/create_group_disclaimer"/>

            <Button
                android:id="@+id/next_create_group"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/group_next"
                android:textColor="@color/white"
                style="@style/bold_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:padding="12dp"
                android:text="@string/create_group_next" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="@style/api_progress_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="12dp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="12dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:orientation="vertical"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_no_friends_connected"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/grey_5"/>

            <TextView
                android:id="@+id/btn_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/com_facebook_button_blue"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_facebookwhite"
                android:drawablePadding="12dp"
                android:paddingLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/btn_share_app"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
