<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:splitMotionEvents="false">

    <ImageView
        android:id="@+id/edx_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edx_logo"/>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/improve_career_tv"
            style="@style/semibold_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/improve_your_career"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_alignParentTop="true"/>

        <org.edx.mobile.view.custom.EButton
            android:id="@+id/sign_up_btn"
            style="@style/bold_white_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bt_signin_active"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_below="@id/improve_career_tv"
            android:text="@string/sign_up_and_learn"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"/>

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/sign_in_tv"
            style="@style/bold_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_below="@id/sign_up_btn"
            android:layout_marginTop="25dp"/>
    </RelativeLayout>

</RelativeLayout>