<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/course_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:paddingBottom="11dp" >

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/course_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/course_image"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:id="@+id/course_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <org.edx.mobile.view.custom.ETextView
                android:id="@+id/course_name"
                style="@style/bold_grey_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="-1.5dp"
                android:text="@string/course_name"
                android:textSize="16sp" />

            <org.edx.mobile.view.custom.ETextView
                android:id="@+id/school_code"
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_name"
                android:ellipsize="end"
                android:maxWidth="150dp"
                android:singleLine="true"
                android:text="@string/school_code"
                android:textColor="@color/org_code_txt"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <org.edx.mobile.view.custom.ETextView
                    android:id="@+id/no_of_videos"
                    style="@style/regular_grey_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="150dp"
                    android:singleLine="true"
                    android:text="@string/videos_no"
                    android:textColor="@color/org_code_txt"
                    android:textSize="12sp" />

                <org.edx.mobile.view.custom.ETextView
                    android:id="@+id/size_of_videos"
                    style="@style/regular_grey_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="150dp"
                    android:paddingLeft="7dp"
                    android:singleLine="true"
                    android:text="@string/size_of_videos"
                    android:textColor="@color/org_code_txt"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- put a frame over this cell, so that corners look rounded -->

    <ImageView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/course_row_layout"
        android:layout_alignLeft="@id/course_row_layout"
        android:layout_alignRight="@id/course_row_layout"
        android:layout_alignTop="@id/course_row_layout"
        android:background="@drawable/bg_frame_course"
        android:contentDescription="@string/app_name" />

</RelativeLayout>